added pagination settings for yaml
